--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ node_modules/*
 lib/logs
 lib/data/database.sq3-journal
 lib/data/registry.sq3
+lib/data/bank.sq3
 lib/saito/web/browser.j*
 lib/saito/1
 lib/1
