--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ lib/data/database.bk2
 lib/data/blocks/*.blk
 lib/test.js
 website/
+lib/saito.log
+lib/saito.err
 lib/debug
 lib/debug.js
 lib/options.bank
