--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "ethereumjs-wallet": "^0.6.0",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
+    "image-resolver": "^0.6.1",
+    "jimp": "^0.2.28",
     "keythereum": "^1.0.3",
     "markdown": "^0.5.0",
     "merkle-tree-gen": "^1.1.0",
