--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
     "sqlite3": "^4.0.0",
+    "tui-editor": "^1.2.5",
     "unzip": "^0.1.11",
     "url-parse": "^1.4.0",
     "winston": "^3.0.0-rc6",
