--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "start.js",
   "scripts": {
     "start": "NODE_ENV=dev node lib/start.js",
+    "serve": "NODE_ENV=prod node --max_old_space_size=4144 lib/start.js",
     "nuke": " cd lib/ && ./compile nuke",
     "test": "NODE_ENV=test mocha 'tests/*.spec.js'"
   },
