--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ethereumjs-wallet": "0.6.2",
     "express": "4.16.3",
     "express-fileupload": "0.4.0",
+    "fastest-stable-stringify": "^2.0.2",
     "fs-extra": "7.0.0",
     "image-resolver": "0.6.1",
     "jimp": "0.3.9",
