--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "base-58": "0.0.1",
     "big.js": "5.1.2",
+    "bignumber.js": "^8.0.1",
     "bloom-filter": "0.2.0",
     "bluebird": "3.5.1",
     "body-parser": "1.18.3",
@@ -47,6 +48,7 @@
     "socket.io": "2.1.1",
     "sqlite": "2.9.2",
     "url-parse": "1.4.3",
+    "web3": "^1.0.0-beta.36",
     "winston": "3.0.0",
     "winston-daily-rotate-file": "3.3.0"
   },
